<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/menu_bg"
    android:orientation="vertical" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:layout_weight="1">

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="left"
                    android:orientation="vertical" android:background="#80404040">

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" android:padding="15px" android:layout_weight="1">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/bola_cores" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="15dp"
                            android:text="@string/helpBonusColor"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout1"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="15px">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/bomb" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:text="@string/helpBombBonus"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" android:padding="15px" android:layout_weight="1">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/time" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="15dp"
                            android:text="@string/timeBonus"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" android:padding="15px" android:layout_weight="1">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:src="@drawable/failbomb" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/failBonus"
                            android:textAppearance="?android:attr/textAppearanceMedium" android:paddingLeft="15px"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:orientation="vertical" android:background="#80404040">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="25px"
                        android:fadeScrollbars="false"
                        android:gravity="center_horizontal"
                        android:padding="5px"
                        android:paddingBottom="5px"
                        android:paddingLeft="5px"
                        android:paddingRight="5px"
                        android:paddingTop="5px"
                        android:text="@string/Help1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="25px"
                        android:fadeScrollbars="false"
                        android:gravity="center_horizontal"
                        android:padding="5px"
                        android:paddingBottom="5px"
                        android:paddingLeft="5px"
                        android:paddingRight="5px"
                        android:paddingTop="5px"
                        android:text="@string/Help2"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/touch_white" android:layout_gravity="center_horizontal"/>

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBack"
        android:text="@string/Back" android:layout_gravity="center_horizontal"/>

</LinearLayout>